# variadic

./: README.md
example/: index_sequence.cpp  invoke.cpp
include/: variadic.hpp
include/variadic/: cat.hpp  comma_if.hpp  core.hpp  expand.hpp  param_set.hpp  size_of.hpp  token.hpp  version.hpp
include/variadic/detail/: add_parens.hpp  enum.hpp  for_each_i.hpp  list.hpp  match.hpp  not_empty.hpp  numerate.hpp  product.hpp  relative_pos.hpp  select.hpp  state.hpp
test/: CMakeLists.txt  Makefile  all.cpp
